# mujobot

./: .gitignore  MUJOCO_LOG.TXT  README.md  mjmodel_A.xml  pyproject.toml
mujobot/: __init__.py
mujobot/envs/: __init__.py  ur5_gripper_v0.py  ur5_paddle_v0.py  ur5_paddle_v1.py  ur5_reach_v0.py  ur5reach.py
mujobot/envs/ur5_gripper/: 2f85.xml  scene.xml  ur5e_gripper.xml
mujobot/envs/ur5_paddle/: scene.xml  ur5e_paddle.xml
mujobot/envs/ur5_reach/: scene.xml
