[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "mujobot"
version = "0.0.1"
description = "A set of MuJoCo-based Gymnasium compatible environments"
authors = [
    { name = "Inaki Vazquez", email = "ivazquez@deusto.es" }
]
dependencies = [
    "numpy==1.26.4",
    "gymnasium==0.29.1",
    "mujoco",
    "robot_descriptions"
]
readme = "README.md"
license = { text = "MIT" }  # Change this if you use a different license
requires-python = ">=3.7"

[project.urls]
Homepage = "https://github.com/inakivazquez/mujobot"
Repository = "https://github.com/inakivazquez/mujobot"
